--- a/01_初识Vue/初识Vue.html
+++ b/01_初识Vue/初识Vue.html
@@ -8,7 +8,7 @@
 <body>
     <!-- 准备好一个容器 -->
     <div id="root">
-        <h1>Hello，{{name}}</h1>
+        <h1>Hello，{{name.toUpperCase()}}</h1>
     </div>
 
     <script type="text/javascript">
@@ -18,7 +18,7 @@
         new Vue({
             el:'#root', //el用于指定当前Vue实例为那个容器服务，值通常为css选择器字符串。
             data:{ // data最后用户存储数据，数据供el所指定的容器去使用，值暂时先写成一个对象。
-                name:'M7'
+                name:'m7'
             }
         });
     </script>
