--- a/09_监视属性/4.天气案例_深度监视_简写.html
+++ b/09_监视属性/4.天气案例_深度监视_简写.html
@@ -51,7 +51,7 @@
   // 正常写法
   /*
   vm.$watch('isHot',{
-    mmediate:true, //初始化时让handler调用一下
+    mediate:true, //初始化时让handler调用一下
     //handler什么时候调用？当isHot发生改变时调用
     handler(newValue,oldValue){
       console.log("isHot被改变了",newValue,oldValue)
