--- a/07_事件处理/2.时间修饰符.html
+++ b/07_事件处理/2.时间修饰符.html
@@ -26,6 +26,7 @@
             width: 200px;
             height: 200px;
             background-color: peru;
+            overflow: auto;
         }
         li{
             height: 100px;
@@ -66,11 +67,16 @@
         </div>
 
         <!-- 事件的默认行为立即执行，无需等待事件回调执行完毕 -->
-        <ul class="list" @wheel="demo" class="list">
+        <!-- wheel事件回调执行完毕后才执行事件的默认行为-->
+        <!-- scroll事件先执行默认行为，再进行事件处理 -->
+        <ul class="list" @wheel.passive="demo" class="list">
+        <!-- <ul class="list" @scroll="demo" class="list"> -->
             <li>1</li>
             <li>2</li>
             <li>3</li>
             <li>4</li>
+            <li>5</li>
+            <li>6</li>
         </ul>
     </div>
 </body>
@@ -93,7 +99,10 @@
                 console.log(n);
             },
             demo(){
-                 
+                var i;
+                for(i=0;i<10000;i++){
+                    console.log('#');
+                }
             }
         }
     })
