--- a/09_监视属性/3.天气案例_深度监视.html
+++ b/09_监视属性/3.天气案例_深度监视.html
@@ -10,8 +10,8 @@
 <body>
   <!-- 
     深度监视：
-      1.Vue中的watch默认不见时对象内部值的改变（一层）。
-      2.配置deep:true可以检测对象内部值改变（多层）。
+      1.Vue中的watch默认不监测对象内部值的改变（一层）。
+      2.配置deep:true可以监测对象内部值改变（多层）。
     备注：
       1.Vue自身可以检测对象内部值的改变，但Vue提供的watch默认不可以！
       2.使用watch时根据数据的具体结构，决定是否采用深度监视。
