--- a/17_生命周期/1.引出生命周期.html
+++ b/17_生命周期/1.引出生命周期.html
@@ -13,6 +13,15 @@
         2.是什么：Vue在关键时刻帮我们调用的一些特殊名称的函数。
         3.生命周期函数的名字不可更改，但函数的具体内容是程序员根据需求编写的。
         4.生命周期函数中的this指向是VM 或组件实例对象
+
+    常用的生命周期钩子：
+        1.mounted：发送ajax请求、启动定时器、绑定自定义事件、订阅消息等【初始化操作】。
+        2.beforeDestroy：清除定时器、解绑自定义事件、取消订阅消息等【收尾工作】。
+
+    关于销毁Vue实例
+        1.销毁后借助Vue开发者工具看不到任何信息。
+        2.销毁后自定义事件会失效，但原生DOM事件依然有效。
+        3.一般不会再beforeDestroy操作数据，因为即便操作数据，也不会再触发更新流程了。
 -->
 <body>
     <div id="root">
